<resources>
    <string name="app_name">CryptoCoinProfit</string>
    <string name="main_activity_top_text"> Top Text Main Activity</string>
    <string name="btcusd">BTCUSD</string>
    <string name="ltcusd">LTCUSD</string>
    <string name="xmrusd">XMRUSD</string>
    <string name="neousd">NEOUSD</string>
    <string name="iotusd">IOTUSD</string>
    <string name="dollarCourse">Dollar Course</string>
    <string name="bitfinex_api_url_prefix">https://IApi.bitfinex.com/v1/pubticker/</string>
    <string name="loading">Loading...</string>
    <string name="zerozero">0.0000</string>


    <string name="btc">BTC</string>
    <string name="ltc">LTC</string>
    <string name="neo">NEO</string>
    <string name="xmr">XMR</string>
    <string name="iot">IOTA</string>
    <string name="usd">USD</string>
    <string name="pln">PLN</string>
    <string name="xrp">XRP</string>
    <string name="bch">BCH</string>
    <string name="dash">DASH</string>
    <string name="trx">TRX</string>
    <string name="eth">ETH</string>

    <string name="btg">BTG</string>
    <string name="zec">ZEC</string>
    <string name="gnt">GNT</string>
    <string name="omg">OMG</string>
    <string name="rep">REP</string>
    <string name="zrx">ZRX</string>
    <string name="bat">BAT</string>

    <string name="bitbay">BITBAY</string>
    <string name="bitfinex">BITFINEX</string>


</resources>
