<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_activity_top_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dollarCourse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/bitbayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bitbay"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/courseTextView" />

    <TextView
        android:id="@+id/ltcTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ltc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btcTextView" />

    <TextView
        android:id="@+id/bitfinexTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/bitfinex"
        app:layout_constraintStart_toEndOf="@+id/xmrTextView"
        app:layout_constraintTop_toBottomOf="@+id/courseTextView" />

    <TextView
        android:id="@+id/courseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/loading"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/xmrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/xmr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ltcTextView" />

    <TextView
        android:id="@+id/btcTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/btcusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/btcplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/ltcusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/btcusdBitfinex" />

    <TextView
        android:id="@+id/xmrusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/ltcusdBitfinex" />

    <TextView
        android:id="@+id/ltcplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/btcplnBitbay" />

    <TextView
        android:id="@+id/xmrplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/ltcplnBitbay" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pln"
        app:layout_constraintStart_toEndOf="@+id/btcusdBitfinex"
        app:layout_constraintTop_toBottomOf="@+id/bitfinexTextView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/usd"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/bitfinexTextView" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pln"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/bitbayTextView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/usd"
        app:layout_constraintStart_toEndOf="@+id/btcplnBitbay"
        app:layout_constraintTop_toBottomOf="@+id/bitbayTextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/xrp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xmrTextView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/trx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/eth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/xrpusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/xmrusdBitfinex" />

    <TextView
        android:id="@+id/trxusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/xrpusdBitfinex" />

    <TextView
        android:id="@+id/ethusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/trxusdBitfinex" />

    <TextView
        android:id="@+id/dshusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/ethusdBitfinex" />

    <TextView
        android:id="@+id/bchusdBitfinex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitfinexTextView"
        app:layout_constraintTop_toBottomOf="@+id/dshusdBitfinex" />

    <TextView
        android:id="@+id/xrpplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/xmrplnBitbay" />

    <TextView
        android:id="@+id/ethplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/trxplnBitbay" />

    <TextView
        android:id="@+id/dshplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/ethplnBitbay" />

    <TextView
        android:id="@+id/bccplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/dshplnBitbay" />

    <TextView
        android:id="@+id/trxplnBitbay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/zerozero"
        app:layout_constraintStart_toStartOf="@+id/bitbayTextView"
        app:layout_constraintTop_toBottomOf="@+id/xrpplnBitbay" />

</android.support.constraint.ConstraintLayout>